# bands_auto_site

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  todo.md  tsconfig.json
docs/: architecture.md  development_journal.md  site_content.md  tools.md
src/: new_index.html  not-found.html
src/backend/: _typing.py  app.py  config.py  handle_form_inputs.py  schemas.py
src/backend/routers/: handle_form_inputs.py
src/frontend/static/css/colors/: color-default.css
src/frontend/static/templates/: new_index.html
src/frontend/templates/: contact.html  index.html  new_index.html  not-found.html
src/frontend/typescript/: classes.ts  testMe.ts  transferFormInput.ts  types.ts
