[project]
name = "bands-auto-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.42.0",
]
